demux: mkv: add support for S_DVBSUB

fixes: #14577

Signed-off-by: Steve Lhomme <robux4@ycbcr.xyz>